# course_4_hw_3

./: .gitignore  pyproject.toml
course_4_hw_3/: utils.py
hw_3/: README.md  custom_queue.py  linked_list.py  pyproject.toml  utils.py
tests/: test_linked_list.py  test_queue.py  test_stack.py
